--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ h1 {
 }
 
 aside{
-  width: 20%;
+  width: 250px;
 }
 
 nav{
@@ -84,6 +84,7 @@ nav{
 }
 
 .nav-list{
+  width: 100%;
   list-style-type: none;
   height: 120px;
   display: flex;
