stylized and thead

--- a/components/header.html
+++ b/components/header.html
@@ -1,9 +1,9 @@
 <header>
-    <h1>CMS</h1>
+    <h1><a href="./index.html">CMS</a></h1>
     <div class="wrapper-header">
       <div class="notif"></div>
       <div class="profile">
-        <img src="./img/avatar-15.png" alt="Foto" class="avatar" />
+        <img src="./img/avatar-default-icon-2048x2048-h6w375ur.png" alt="Foto" class="avatar" />
         <p class="username">Ivanna Pavlyshyn</p>
       </div>
     </div>
