--- a/components/header.html
+++ b/components/header.html
@@ -2,9 +2,13 @@
     <h1><a href="./index.html">CMS</a></h1>
     <div class="wrapper-header">
       <div class="notif"></div>
-      <div class="profile">
+      <div class="profile" onclick="openDropProfile()">
         <img src="./img/avatar-default-icon-2048x2048-h6w375ur.png" alt="Foto" class="avatar" />
         <p class="username">Ivanna Pavlyshyn</p>
+        <div id="drop-profile">
+          <p class="drop-profile-p"><a href="#">Profile</a></p>
+          <p class="drop-profile-p"><a href="#">Log out</a></p>
+        </div>
       </div>
     </div>
   </header>
