--- a/css/header.css
+++ b/css/header.css
@@ -74,6 +74,7 @@ h1 {
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
   background-color: #5c2018;
+  flex-direction: column;
 }
 
 .drop-profile-p{
@@ -93,3 +94,4 @@ h1 {
   text-decoration: none;
   color: #f3e0dc;
 }
+
