--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,9 @@
 <header>
     <h1><a href="./index.html">CMS</a></h1>
     <div class="wrapper-header">
-      <div class="notif"></div>
+      <div class="notif">
+        <img id="bell" onclick="bell()" src="../img/appointment-reminders.png" alt="">
+      </div>
       <div class="profile" onclick="openDropProfile()">
         <img src="./img/avatar-default-icon-2048x2048-h6w375ur.png" alt="Foto" class="avatar" />
         <p class="username">Ivanna Pavlyshyn</p>
