--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,9 @@ header {
   flex-direction: row;
   justify-content: space-between;
   height: 10vh;
+  position: absolute;
+  z-index: 3;
+  width: 100%;
 }
 
 h1 a {
@@ -95,3 +98,20 @@ h1 {
   color: #f3e0dc;
 }
 
+.notif{
+  width: 30%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.notif img{
+  display: block;
+  width: 40px;
+  height: 40px;
+  border: none;
+  border-radius: 50%;
+  z-index: 2;
+}
