--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,7 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 10vh;
+  height: 100px;
   position: absolute;
   z-index: 3;
   width: 100%;
@@ -22,25 +22,24 @@ h1 {
   font-style: normal;
   text-decoration: none;
   height: 100%;
-  line-height: 10vh;
+  line-height: 100px;
   width: 11%;
   text-align: center;
   letter-spacing: 1px;
 }
 
 .wrapper-header {
-  width: 30%;
+  width: 20%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: relative;
 }
 
 .avatar {
   width: 40px;
   height: 40px;
 }
-
-
 
 .username {
   font-family: Arial;
@@ -49,15 +48,15 @@ h1 {
   font-weight: normal;
   font-style: normal;
   text-decoration: none;
-  line-height: 14px;
+  line-height: 28px;
   letter-spacing: 1.5px;
   margin-right: 15px;
   text-align: center;
+  margin-left: 10px;
 }
 
-
 .profile {
-  width: 70%;
+  width: 90%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -67,7 +66,11 @@ h1 {
   cursor: pointer;
 }
 
-#drop-profile{
+.profile:hover #drop-profile {
+  display: flex;
+}
+
+#drop-profile {
   position: absolute;
   width: 60%;
   height: 20vh;
@@ -80,7 +83,7 @@ h1 {
   flex-direction: column;
 }
 
-.drop-profile-p{
+.drop-profile-p {
   height: 50%;
   width: 100%;
 
@@ -93,25 +96,126 @@ h1 {
   text-align: center;
 }
 
-.drop-profile-p a{
+.drop-profile-p a {
   text-decoration: none;
   color: #f3e0dc;
 }
 
-.notif{
-  width: 30%;
+.notif {
+  width: 15%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
   position: relative;
+  margin-right: 20px;
 }
 
-.notif img{
+.notif img {
   display: block;
   width: 40px;
   height: 40px;
   border: none;
   border-radius: 50%;
   z-index: 2;
+}
+
+#sign-not {
+  width: 10px;
+  height: 10px;
+  background-color: #4286f5;
+  border-radius: 50%;
+  top: 10px;
+  right: 0;
+  position: absolute;
+  display: block;
+}
+
+.notif:hover ~ #message-wraper {
+  display: flex;
+}
+
+#message-wraper {
+  width: 95%;
+  height: 300px;
+  background-color: #d4a59a;
+  position: absolute;
+  top: 100px;
+  left: 0;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.message-elem {
+  width: 90%;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.message-avatar {
+  display: block;
+  width: 35px;
+  height: 35px;
+  border: none;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+.message-item {
+  position: relative;
+  border-radius: 10px;
+  padding: 20px;
+  width: 65%;
+  height: 50px;
+  margin-left: 15px;
+  background-color: #5c2018;
+}
+
+/* Arrow on the left */
+.message-item::before {
+  content: "";
+  position: absolute;
+  left: -10px;
+  top: 20px;
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-right: 10px solid #5c2018;
+}
+
+/* Inner triangle to match the background */
+.message-item::after {
+  content: "";
+  position: absolute;
+  left: -9px;
+  top: 20px;
+  width: 0;
+  height: 0;
+  border-top: 9px solid transparent;
+  border-bottom: 9px solid transparent;
+  border-right: 9px solid #5c2018;
+}
+
+.message-profile {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Arial;
+  font-size: 16px;
+  color: #000000;
+}
+
+
+@media screen and (max-width: 1200px) {
+  
+
 }
