--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,14 @@ td input[type="checkbox"]:checked + label::before {
   color: #bc463a;
 }
 
-#button-add {
+#but-table-all{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+#button-add,
+#button-del-all {
   width: 50px;
   height: 50px;
   border: 3px solid #4286f5;
@@ -135,6 +142,19 @@ td input[type="checkbox"]:checked + label::before {
   color: #5c2019;
   align-self: flex-end;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+
+  img{
+    width: 30px;
+    height: 30px;
+  }
+}
+
+#button-del-all{
+  display: none;
 }
 
 .wrapper-table {
@@ -155,7 +175,8 @@ td input[type="checkbox"]:checked + label::before {
   display: none;
 }
 
-#addStudent {
+#addStudent,
+#delete-wraper {
   width: 40%;
   height: 70%;
   background-color: white;
@@ -168,6 +189,12 @@ td input[type="checkbox"]:checked + label::before {
   display: none;
   border-radius: 10px;
   flex-direction: column;
+}
+
+#delete-wraper{
+  width: 40%;
+  height: 40%;
+  display: none;
 }
 
 #button-close {
@@ -194,6 +221,17 @@ h3 {
   color: #bc463a;
   line-height: 20px;
   letter-spacing: 1px;
+}
+
+#war_text{
+  font-family: "Monomakh", Arial;
+  font-size: 20px;
+  text-align: center;
+  margin: auto;
+  width: 90%;
+  min-height: 20%;
+  line-height: 30px;
+
 }
 
 .line {
@@ -259,7 +297,9 @@ h3 {
 
 #button-ok,
 #button-create,
-#button-save {
+#button-save,
+#button-cancel,
+#button-ok-del {
   width: 40%;
   height: 50%;
   background-color: transparent;
@@ -270,7 +310,8 @@ h3 {
 }
 
 #button-create,
-#button-save {
+#button-save,
+#button-cancel {
   width: 50%;
   display: block;
  
@@ -293,6 +334,8 @@ h3 {
   position: relative;
 }
 
+
+
 #button-edit img,
 #button-del img{
   width: 30px;
@@ -302,6 +345,17 @@ h3 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  display: block;
+}
+
+
+
+#button-edit:hover img,
+#button-del:hover img {
+  width: 38px;
+  height: 38px;
 }
 
 
@@ -321,3 +375,4 @@ h3 {
 td:nth-child(7){
   border-right: none;
 }
+
