--- a/css/header.css
+++ b/css/header.css
@@ -23,13 +23,14 @@ h1 {
   text-decoration: none;
   height: 100%;
   line-height: 100px;
-  width: 11%;
+  width: 50px;
   text-align: center;
   letter-spacing: 1px;
+  margin-left: 20px;
 }
 
 .wrapper-header {
-  width: 20%;
+  width: 400px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -42,7 +43,7 @@ h1 {
 }
 
 .username {
-  font-family: Arial;
+  font-family: "Monomakh", Arial;
   font-size: 18px;
   color: #f3e0dc;
   font-weight: normal;
@@ -52,11 +53,11 @@ h1 {
   letter-spacing: 1.5px;
   margin-right: 15px;
   text-align: center;
-  margin-left: 10px;
+  width: 70%;
 }
 
 .profile {
-  width: 90%;
+  width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -72,10 +73,9 @@ h1 {
 
 #drop-profile {
   position: absolute;
-  width: 60%;
-  height: 20vh;
-  left: 29%;
-  bottom: -20vh;
+  width: 320px;
+  height: 150px;
+  bottom: -149px;
   display: none;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
@@ -87,10 +87,10 @@ h1 {
   height: 50%;
   width: 100%;
 
-  font-family: Arial;
+  font-family: "Monomakh", Arial;
   font-size: 14px;
   text-decoration: none;
-  line-height: 10vh;
+  line-height: 75px;
   letter-spacing: 1.5px;
   margin-right: 15px;
   text-align: center;
@@ -131,12 +131,12 @@ h1 {
   display: block;
 }
 
-.notif:hover ~ #message-wraper {
+.notif:hover #message-wraper {
   display: flex;
 }
 
 #message-wraper {
-  width: 95%;
+  width: 400px;
   height: 300px;
   background-color: #d4a59a;
   position: absolute;
@@ -146,15 +146,17 @@ h1 {
   border-bottom-left-radius: 10px;
   display: none;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 20px 0;
   align-items: center;
 }
 
 .message-elem {
-  width: 90%;
-  height: 50px;
+  width: 360px;
+  height: 80px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .message-avatar {
@@ -164,13 +166,19 @@ h1 {
   border: none;
   border-radius: 50%;
   z-index: 2;
+  margin-bottom: 5px;
+}
+
+.messahe-author {
+  font-family: "Monomakh", Arial;
+  text-align: center;
 }
 
 .message-item {
   position: relative;
   border-radius: 10px;
   padding: 20px;
-  width: 65%;
+  width: 75%;
   height: 50px;
   margin-left: 15px;
   background-color: #5c2018;
@@ -204,18 +212,107 @@ h1 {
 
 .message-profile {
   width: 60px;
-  height: 60px;
+  height: 50px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   font-family: Arial;
   font-size: 16px;
   color: #000000;
 }
 
-
 @media screen and (max-width: 1200px) {
-  
+}
 
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 760px) {
+  .wrapper-header {
+    width: 320px;
+  }
+
+  #drop-profile {
+    width: 252px;
+  }
+
+  #message-wraper {
+    height: 280px;
+    width: 320px;
+  }
+
+  .message-elem{
+    width: 288px;
+  }
+
+  /*.message-elem {
+    justify-content: center;
+  } */
+
+  /* .message-item {
+    height: 40px;
+    display: none;
+  }
+   */
+  /* .message-item::before {
+    top: 10px;
+  }
+
+  .message-item::after {
+    top: 10px;
+  }
+
+  .message-avatar {
+    width: 30px;
+    height: 30px;
+  } */
+
+  .username {
+    font-size: 16px;
+    width: 71%;
+    margin-left: 5px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .wrapper-header {
+    width: 280px;
+  }
+
+  #drop-profile {
+    width: 219px;
+  }
+
+  #message-wraper {
+    height: 280px;
+    width: 280px;
+  }
+
+  .message-elem{
+    width: 252px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .wrapper-header {
+    width: 200px;
+  }
+
+  #drop-profile {
+    width: 160px;
+  }
+
+  .notif {
+    width: 10%;
+    margin-right: 0;
+  }
+
+  #message-wraper {
+    height: 280px;
+    width: 200px;
+  }
+
+  .message-elem{
+    width: 180px;
+  }
 }
