--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,10 +1,14 @@
+<div id="burger-menu" onclick="burgerMenu()">
+  <div class="line-burger"></div>
+  <div class="line-burger"></div>
+  <div class="line-burger"></div>
+</div>
 <aside>
-    <nav>
-      <ul class="nav-list">
-        <li><a class="nav-item" href="./dashboard.html">Dashboard</a></li>
-        <li><a class="nav-item" href="./index.html">Students</a></li>
-        <li><a class="nav-item" href="./tasks.html">Tasks</a></li>
-      </ul>
-    </nav>
-  </aside>
-  
+  <nav>
+    <ul class="nav-list">
+      <li><a class="nav-item" href="./dashboard.html">Dashboard</a></li>
+      <li><a class="nav-item" href="./index.html">Students</a></li>
+      <li><a class="nav-item" href="./tasks.html">Tasks</a></li>
+    </ul>
+  </nav>
+</aside>
