--- a/css/main.css
+++ b/css/main.css
@@ -380,6 +380,39 @@ td:nth-child(7) {
   display: none;
 }
 
+.pagination {
+  display: flex;
+  margin: auto;
+  width: 400px;
+  margin-top: 30px;
+}
+
+
+
+.pagination a {
+  color: black;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 2px solid #5c2019;
+  color: #5c2019;
+  font-size: 18px;
+  margin: 0 1px;
+  border-radius: 5px;
+}
+
+.pagination a.active {
+  background-color: #4286f5;
+  color: white;
+  border: 1px solid #4286f5;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
+
+tr:last-child td{
+  border-bottom: none;
+}
+
 @media screen and (max-width: 1800px) {
   main {
     width: 75%;
