--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -39,6 +39,17 @@ aside {
   position: fixed;
   padding-top: 100px;
   z-index: 2;
+  display: flex;
+  flex-direction: column;
+
+  transition: width 0.3s ease, opacity 0.3s ease, visibility 0.3s ease,
+    padding 0.3s ease;
+}
+
+aside.open {
+  width: 250px;
+  opacity: 1;
+  visibility: visible;
 }
 
 nav {
@@ -61,11 +72,12 @@ nav {
   display: none;
 }
 
-
-
 @media screen and (max-width: 1250px) {
   aside {
-    display: none;
+    width: 0px;
+    opacity: 0;
+    visibility: hidden;
+    overflow: hidden;
   }
 
   #burger-menu {
@@ -84,7 +96,7 @@ nav {
     z-index: 3;
   }
 
-  .line-burger{
+  .line-burger {
     width: 30px;
     height: 3px;
     background-color: #5c2019;
