--- a/css/header.css
+++ b/css/header.css
@@ -67,20 +67,27 @@ h1 {
   cursor: pointer;
 }
 
-.profile:hover #drop-profile {
-  display: flex;
-}
-
 #drop-profile {
   position: absolute;
   width: 320px;
-  height: 150px;
-  bottom: -149px;
-  display: none;
+  height: 0;
+  top: 100px;
+  display: flex;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
   background-color: #5c2018;
   flex-direction: column;
+  opacity: 0;
+  visibility: hidden;
+  overflow: hidden;
+  transition: height 0.3s ease, opacity 0.3s ease, visibility 0.3s ease,
+    padding 0.3s ease;
+}
+
+.profile:hover #drop-profile {
+  height: 150px;
+  opacity: 1;
+  visibility: visible;
 }
 
 .drop-profile-p {
@@ -125,30 +132,37 @@ h1 {
   height: 10px;
   background-color: #4286f5;
   border-radius: 50%;
-  top: 10px;
+  top: 25px;
   right: 0;
   position: absolute;
   display: block;
 }
 
-.notif:hover #message-wraper {
-  display: flex;
-}
-
 #message-wraper {
   width: 400px;
-  height: 300px;
+  height: 0;
   background-color: #d4a59a;
   position: absolute;
   top: 100px;
   left: 0;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
-  display: none;
+  display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 20px 0;
+  justify-content: space-around;
+  padding: 0 20px;
   align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  overflow: hidden;
+  transition: height 0.3s ease, opacity 0.3s ease, visibility 0.3s ease,
+    padding 0.3s ease;
+}
+
+.notif:hover #message-wraper {
+  opacity: 1;
+  height: 380px;
+  visibility: visible;
 }
 
 .message-elem {
@@ -221,8 +235,6 @@ h1 {
   color: #000000;
 }
 
-
-
 @media screen and (max-width: 760px) {
   .wrapper-header {
     width: 320px;
@@ -237,10 +249,9 @@ h1 {
     width: 320px;
   }
 
-  .message-elem{
+  .message-elem {
     width: 288px;
   }
-
 
   .username {
     font-size: 16px;
@@ -263,7 +274,7 @@ h1 {
     width: 280px;
   }
 
-  .message-elem{
+  .message-elem {
     width: 252px;
   }
 }
@@ -277,23 +288,21 @@ h1 {
     width: 160px;
   }
 
-  .bell{
+  .bell {
     width: 35px;
     height: 35px;
   }
 
-  .notif{
+  .notif {
     width: 10%;
   }
-
-
 
   #message-wraper {
     height: 280px;
     width: 200px;
   }
 
-  .message-elem{
+  .message-elem {
     width: 180px;
   }
 }
