--- a/components/header.html
+++ b/components/header.html
@@ -1,61 +1,77 @@
-<header>
-  <h1><a href="./index.html">CMS</a></h1>
-  <div class="wrapper-header">
-    <div class="notif">
-      <!-- <a href="../message.html"> -->
-        <img
-          id="bell"
-          ondblclick="bell()"
-          onclick="hideNotif(event)"
-
-          src="../img/appointment-reminders.png">
-        <!-- /> --> 
-      </a>
-      <div id="sign-not"></div>
-      <div id="message-wraper">
-        <div class="message-elem">
-          <div class="message-profile">
-            <img
-              src="../img/gender-neutral-user.png"
-              alt=""
-              class="message-avatar"
-            />
-            <p class="message-author">John. K.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="../css/header.css">
+</head>
+<body> 
+  <header class="display_flex_r_sb">
+    <h1 class="font-Monomakh"><a href="./index.html">CMS</a></h1>
+    <div class="wrapper-header display_flex_r_sb">
+      <div class="notif">
+        <!-- <a href="../message.html"> -->
+          <img
+      id="bell"
+      tabindex="0" 
+      
+      onclick="hideNotif(event)"
+      onkeydown="handleKeyPress(event)"
+      alt="Notification bell"
+      src="../img/appointment-reminders.png">
+      <!-- ondblclick="bell()"> -->
+      
+          <!-- /> --> 
+        <!-- </a> -->
+        <div id="sign-not"></div>
+        <div id="message-wraper" class="animation display_flex_c">
+          <div class="message-elem display_flex_r_sb">
+            <div class="message-profile display_flex_c">
+              <img
+                src="../img/gender-neutral-user.png"
+                alt=""
+                class="message-avatar"
+              />
+              <p class="font-Monomakh">John. K.</p>
+            </div>
+            <div class="message-item"></div>
           </div>
-          <div class="message-item"></div>
-        </div>
-        <div class="message-elem">
-          <div class="message-profile">
-            <img
-              src="../img/gender-neutral-user.png"
-              alt=""
-              class="message-avatar"
-            />
-            <p class="message-author">John. K.</p>
+          <div class="message-elem display_flex_r_sb">
+            <div class="message-profile">
+              <img
+                src="../img/gender-neutral-user.png"
+                alt=""
+                class="message-avatar"
+              />
+              <p class=" font-Monomakh">John. K.</p>
+            </div>
+            <div class="message-item"></div>
           </div>
-          <div class="message-item"></div>
-        </div>
-        <div class="message-elem">
-          <div class="message-profile">
-            <img
-              src="../img/gender-neutral-user.png"
-              alt=""
-              class="message-avatar"
-            />
-            <p class="message-author">John. K.</p>
+          <div class="message-elem display_flex_r_sb">
+            <div class="message-profile">
+              <img
+                src="../img/gender-neutral-user.png"
+                alt=""
+                class="message-avatar"
+              />
+              <p class=" font-Monomakh">John. K.</p>
+            </div>
+            <div class="message-item"></div>
           </div>
-          <div class="message-item"></div>
         </div>
       </div>
-    </div>
-    <div class="profile" >
-      <img src="./img/gender-neutral-user.png" alt="Foto" class="avatar" />
-      <p class="username">Ivanna Pavlyshyn</p>
-      <div id="drop-profile">
-        <p class="drop-profile-p"><a href="#">Profile</a></p>
-        <p class="drop-profile-p"><a href="#">Log out</a></p>
+      <div class="profile display_flex_r_sa" >
+        <img src="./img/gender-neutral-user.png" alt="Foto" class="avatar" />
+        <p class="username font-Monomakh">Ivanna Pavlyshyn</p>
+        <div id="drop-profile" class="animation">
+          <p class="drop-profile-p font-Monomakh"><a href="#">Profile</a></p>
+          <p class="drop-profile-p font-Monomakh"><a href="#">Log out</a></p>
+        </div>
       </div>
+      
     </div>
-    
-  </div>
-</header>
+  </header>
+  
+</body>
+</html>
