--- a/css/header.css
+++ b/css/header.css
@@ -1,123 +1,107 @@
-header {
-  background-color: #5c2019;
+.display_flex_r_sb {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  height: 100px;
-  position: absolute;
-  z-index: 3;
-  width: 100%;
 }
-
-h1 a {
-  text-decoration: none;
-  color: #f3e0dc;
-}
-
-h1 {
-  font-family: "Monomakh", Arial;
-  font-size: 25px;
-  color: #f3e0dc;
-  font-weight: normal;
-  font-style: normal;
-  text-decoration: none;
-  height: 100%;
-  line-height: 100px;
-  width: 50px;
-  text-align: center;
-  letter-spacing: 1px;
-  margin-left: 20px;
-}
-
-.wrapper-header {
-  width: 400px;
+.display_flex_r_sa {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  position: relative;
 }
-
-.avatar {
-  width: 40px;
-  height: 40px;
-}
-
-.username {
-  font-family: "Monomakh", Arial;
-  font-size: 18px;
-  color: #f3e0dc;
-  font-weight: normal;
-  font-style: normal;
-  text-decoration: none;
-  line-height: 28px;
-  letter-spacing: 1.5px;
-  margin-right: 15px;
-  text-align: center;
-  width: 70%;
-}
-
-.profile {
-  width: 80%;
+.display_flex_c {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  padding: 15px;
-  position: relative;
-  cursor: pointer;
-}
-
-#drop-profile {
-  position: absolute;
-  width: 320px;
-  height: 0;
-  top: 100px;
-  display: flex;
-  border-bottom-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-  background-color: #5c2018;
   flex-direction: column;
+}
+.font-Monomakh {
+  font-family: "Monomakh", Arial;
+  font-weight: normal;
+  font-style: normal;
+  text-decoration:none;
+  text-align: center;
+}
+.animation {
   opacity: 0;
   visibility: hidden;
   overflow: hidden;
   transition: height 0.3s ease, opacity 0.3s ease, visibility 0.3s ease,
     padding 0.3s ease;
 }
-
+header {
+  width: 100%;
+  height: 100px;
+  background-color: #5c2019;
+  position:absolute;
+  z-index: 3;
+}
+h1 a {
+  text-decoration: none;
+  color: #f3e0dc;
+}
+h1 {
+  width: 50px;
+  height: 100%;
+  color:#f3e0dc;
+  font-size: 25px;
+  line-height: 100px;
+  letter-spacing: 1px;
+  margin-left: 20px;
+}
+.wrapper-header {
+  width: 400px;
+  position: relative;
+}
+.avatar {
+  width: 40px;
+  height: 40px;
+}
+.username {
+  width: 70%;
+  font-size: 18px;
+  line-height: 28px;
+  color:#f3e0dc;
+  letter-spacing: 1.5px;
+  margin-right: 15px;
+}
+.profile {
+  width: 80%;
+  position: relative;
+  align-items: center;
+  padding: 15px;
+  cursor: pointer;
+}
+#drop-profile {
+  width: 320px;
+  height: 0;
+  position: absolute;
+  top: 100px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  background-color: #5c2019;
+}
 .profile:hover #drop-profile {
   height: 150px;
   opacity: 1;
   visibility: visible;
 }
-
 .drop-profile-p {
   height: 50%;
   width: 100%;
-
-  font-family: "Monomakh", Arial;
   font-size: 14px;
-  text-decoration: none;
   line-height: 75px;
   letter-spacing: 1.5px;
   margin-right: 15px;
-  text-align: center;
 }
-
 .drop-profile-p a {
   text-decoration: none;
   color: #f3e0dc;
 }
-
 .notif {
   width: 15%;
   height: 100%;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   position: relative;
   margin-right: 20px;
 }
-
 .notif img {
   display: block;
   width: 40px;
@@ -126,7 +110,6 @@ h1 {
   border-radius: 50%;
   z-index: 2;
 }
-
 #sign-not {
   width: 10px;
   height: 10px;
@@ -137,7 +120,6 @@ h1 {
   position: absolute;
   display: block;
 }
-
 #message-wraper {
   width: 400px;
   height: 0;
@@ -147,32 +129,20 @@ h1 {
   left: 0;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
-  display: flex;
-  flex-direction: column;
   justify-content: space-around;
-  padding: 0 20px;
   align-items: center;
-  opacity: 0;
-  visibility: hidden;
-  overflow: hidden;
-  transition: height 0.3s ease, opacity 0.3s ease, visibility 0.3s ease,
-    padding 0.3s ease;
+  padding: 0 20px;
 }
-
 .notif:hover #message-wraper {
   opacity: 1;
   height: 380px;
   visibility: visible;
 }
-
 .message-elem {
   width: 360px;
   height: 80px;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
 }
-
 .message-avatar {
   display: block;
   width: 35px;
@@ -182,12 +152,6 @@ h1 {
   z-index: 2;
   margin-bottom: 5px;
 }
-
-.messahe-author {
-  font-family: "Monomakh", Arial;
-  text-align: center;
-}
-
 .message-item {
   position: relative;
   border-radius: 10px;
@@ -195,10 +159,8 @@ h1 {
   width: 75%;
   height: 50px;
   margin-left: 15px;
-  background-color: #5c2018;
+  background-color: #5c2019;
 }
-
-/* Arrow on the left */
 .message-item::before {
   content: "";
   position: absolute;
@@ -208,10 +170,8 @@ h1 {
   height: 0;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-right: 10px solid #5c2018;
+  border-right: 10px solid #5c2019;
 }
-
-/* Inner triangle to match the background */
 .message-item::after {
   content: "";
   position: absolute;
@@ -221,38 +181,35 @@ h1 {
   height: 0;
   border-top: 9px solid transparent;
   border-bottom: 9px solid transparent;
-  border-right: 9px solid #5c2018;
+  border-right: 9px solid #5c2019;
 }
-
 .message-profile {
   width: 60px;
   height: 50px;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   font-family: Arial;
   font-size: 16px;
   color: #000000;
 }
+#but-bell {
+  background-color: transparent;
+  border: none;
+}
 
 @media screen and (max-width: 760px) {
-  .wrapper-header {
+  .wrapper-header,
+  #message-wraper {
     width: 320px;
   }
-
   #drop-profile {
     width: 252px;
   }
-
   #message-wraper {
     height: 280px;
-    width: 320px;
   }
-
   .message-elem {
     width: 288px;
   }
-
   .username {
     font-size: 16px;
     width: 71%;
@@ -261,47 +218,32 @@ h1 {
 }
 
 @media screen and (max-width: 460px) {
-  .wrapper-header {
+  .wrapper-header,
+  #drop-profile,
+  #message-wraper {
     width: 280px;
   }
-
-  #drop-profile {
-    width: 219px;
-  }
-
   #message-wraper {
     height: 280px;
-    width: 280px;
   }
-
   .message-elem {
     width: 252px;
   }
 }
 
 @media screen and (max-width: 350px) {
-  .wrapper-header {
+  .wrapper-header,
+  #drop-profile,
+  #message-wraper {
     width: 200px;
   }
-
-  #drop-profile {
-    width: 160px;
-  }
-
   .bell {
     width: 35px;
     height: 35px;
   }
-
   .notif {
     width: 10%;
   }
-
-  #message-wraper {
-    height: 280px;
-    width: 200px;
-  }
-
   .message-elem {
     width: 180px;
   }
