--- a/components/header.html
+++ b/components/header.html
@@ -11,7 +11,7 @@
     <h1 class="font-Monomakh"><a href="./index.html">CMS</a></h1>
     <div class="wrapper-header display_flex_r_sb">
       <div class="notif">
-        <!-- <a href="../message.html"> -->
+        <a href="../message.html">
           <img
       id="bell"
       tabindex="0" 
@@ -23,7 +23,7 @@
       <!-- ondblclick="bell()"> -->
       
           <!-- /> --> 
-        <!-- </a> -->
+        </a>
         <div id="sign-not"></div>
         <div id="message-wraper" class="animation display_flex_c">
           <div class="message-elem display_flex_r_sb">
@@ -38,7 +38,7 @@
             <div class="message-item"></div>
           </div>
           <div class="message-elem display_flex_r_sb">
-            <div class="message-profile">
+            <div class="message-profile display_flex_c">
               <img
                 src="../img/gender-neutral-user.png"
                 alt=""
@@ -49,7 +49,7 @@
             <div class="message-item"></div>
           </div>
           <div class="message-elem display_flex_r_sb">
-            <div class="message-profile">
+            <div class="message-profile display_flex_c">
               <img
                 src="../img/gender-neutral-user.png"
                 alt=""
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="profile display_flex_r_sa" >
-        <img src="./img/gender-neutral-user.png" alt="Foto" class="avatar" />
+        <img src="../img/gender-neutral-user.png" alt="Foto" class="avatar" />
         <p class="username font-Monomakh">Ivanna Pavlyshyn</p>
         <div id="drop-profile" class="animation">
           <p class="drop-profile-p font-Monomakh"><a href="#">Profile</a></p>
